--- a/bookshifter-app/package.json
+++ b/bookshifter-app/package.json
@@ -15,6 +15,8 @@
     "@material-tailwind/react": "^2.1.2",
     "axios": "^1.6.8",
     "firebase": "^10.5.0",
+    "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
