--- a/bookshifter-app/package.json
+++ b/bookshifter-app/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.5.0",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
